<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, EQActivity!</string>
    <string name="app_name">EQ</string>
    <string name="low_voice">BASS</string>
    <string name="middle_voice">MID</string>
    <string name="high_voice">TRE</string>
    <string name="low_f">LPF</string>
    <string name="middle_f">MPF</string>
    <string name="high_f">HPF</string>
    <string name="reset">Reset</string>
    <string name="rock">Rock</string>
    <string name="classes">Classes</string>
    <string name="jazz">Jazz</string>
    <string name="fashion">Fashion</string>
    <string name="elec">Elec</string>
    <string name="flat">Flat</string>
    <string name="user">Option</string>
    <string name="balancer">Balancer</string>
    <string name="low_voice_value">0</string>
    <string name="middle_voice_value">0</string>
    <string name="high_voice_value">0</string>
    <string name="low_f_value">0Hz</string>
    <string name="middle_f_value">0kHz</string>
    <string name="high_f_value">0Hz</string>
    <string name="increase">Subwoofer</string>
    <string name="add">+0</string>
    <string name="equalizer">Equalizer</string>
    <string name="subwoofer">Subwoofer</string>
    <string name="loud">Loud</string>
    <string name="subwoofer_value">0</string>
    <string name="negative_twelve">-12</string>
    <string name="negative_eleven">-11</string>
    <string name="negative_ten">-10</string>
    <string name="negative_nine">-9</string>
    <string name="negative_eight">-8</string>
    <string name="negative_seven">-7</string>
    <string name="negative_six">-6</string>
    <string name="negative_five">-5</string>
    <string name="negative_four">-4</string>
    <string name="negative_there">-3</string>
    <string name="negative_two">-2</string>
    <string name="negative_one">-1</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fiveteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="ninteen">19</string>
    <string name="twenty">20</string>
    <string name="twenty_one">21</string>
    <string name="twenty_two">22</string>
    <string name="twenty_there">23</string>
    <string name="twenty_four">24</string>
    <string name="sixty">60HZ</string>
    <string name="eighty">80HZ</string>
    <string name="one_hundred">100HZ</string>
    <string name="two_hundred">200HZ</string>
    <string name="point_five_khz">0.5KHZ</string>
    <string name="one_khz">1KHZ</string>
    <string name="one_point_five_khz">1.5KHZ</string>
    <string name="two_point_five_khz">2.5KHZ</string>
    <string name="ten_khz">10KHZ</string>
    <string name="twelve_point_five_khz">12.5KHZ</string>
    <string name="fivteen_khz">15KHZ</string>
    <string name="seventeen_point_five_khz">17.5KHZ</string>
</resources>
