<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:background="@drawable/sound_box" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="5dp">
    <TextView android:textSize="20sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/eq_music_rock" android:background="@drawable/music_eq_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="35dp" android:layout_marginTop="25dp" android:text="@string/rock" android:layout_weight="1"/>
    <TextView android:textSize="20sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/eq_music_class" android:background="@drawable/music_eq_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="25dp" android:text="@string/classes" android:layout_weight="1" android:layout_toRightOf="@+id/eq_music_rock"/>
    <TextView android:textSize="20sp" android:textColor="#00ff00" android:gravity="center" android:id="@+id/eq_music_jazz" android:background="@drawable/music_eq_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="25dp" android:text="@string/jazz" android:layout_weight="1" android:layout_toRightOf="@+id/eq_music_class"/>
    <TextView android:textSize="20sp" android:textColor="#00ff00" android:gravity="center" android:id="@+id/eq_music_fashion" android:background="@drawable/music_eq_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="25dp" android:text="@string/fashion" android:layout_weight="1" android:layout_toRightOf="@+id/eq_music_jazz"/>
    <TextView android:textSize="20sp" android:textColor="#00ff00" android:gravity="center" android:id="@+id/eq_music_flat" android:background="@drawable/music_eq_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="25dp" android:text="@string/elec" android:layout_weight="1" android:layout_toRightOf="@+id/eq_music_fashion"/>
    <TextView android:textSize="20sp" android:textColor="#00ff00" android:gravity="center" android:id="@+id/eq_music_option" android:background="@drawable/music_eq_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="25dp" android:text="@string/user" android:layout_weight="1" android:layout_toRightOf="@+id/eq_music_flat"/>
</LinearLayout>
